# py8080

./: .gitignore  8080exer.py  BmPlus_Rainbow100_re_80.otb  LICENSE.md  README.md  altair_basic.py  cpm.py  cpm_disk.py  kbhit.py  pyproject.toml  virtual8080.py  virtual_device.py
8080exer/: 8080EX1.HEX  bdos-emu.asm  bdos-emu.hex
cpm_1.4/: pyemu-cpm14-boot-sector.asm  pyemu-cpm14-cbios.asm
cpm_2.2/: pyemu-cpm-boot-sector.asm  pyemu-cpm-cbios.asm
cpm_3/: bios3.asm  boot.asm  ldrbios.asm
