[tool.poetry]
name = "py8080"
version = "0.0.1"
description = "8080 Emulator"
authors = ["Kevin Cheung <kevinthecheung@gmail.com>"]
license = "https://unlicense.org/"

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
